# tinyvg-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: shapes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: reader.rs
src/: lib.rs
tests/: roundtrip.rs
